-added option to control whether media (sound/video) gets started automatically when displaying a card.
-added option to display a media control (play/pause/slider)
-improved backup scheme. Users can now restore from backups using the File - Open menu, as opposed to first decompressing a file outside of Mnemosyne.
	
	
MNEMOSYNE 2.0

(Note that for Windows users we recommend uninstalling the previous
version before doing an upgrade.)


*** IMPORTANT UPGRADE NOTICE ***

This version uses a different database format. Before upgrading, export your
old data as xml. After upgrade, create a new database and import the old data
from the xml file.

This is essentially a complete rewrite of the old 1.x codebase, with a new,
clean design, consisting of components that can be swapped in and out very
easily, which allows plugin writers maximum flexibility.

-Support for what is called card types. The main user visible changes are that
 editing a vice versa card or three sided card will automatically update the
 related card. There is also support for N-sided cards.
-Each individual field in a card can now have its own font, colour, ... which
 can be set through the GUI. No more need for hacks like 'increase size of 
 non-latin characters'. Background colour is also configurable per card type.
-Whereas in Mnemosyne 1.x, a card could belong to only one category, now a card
 can have multiple tags.
-Added card type for maps, and for cloze deletion.
-Plugins can now be turned on and off through the GUI.
-Move from Qt3 to Qt4 as GUI toolkit, which has better performance and 
 eliminates many interface quirks.
-Windows use scroll bar when the data does not fit.
-The widget that displays the cards is now a full webbrowser, with e.g. 
 support for Javascript, animated gifs, ...	
-Move to SQL as the storage backend, resulting in improved speed and memory
 usage, as well as better scalability for large decks. Majority of work done
 by Ed Bartosh.