@@ -1,9 +1,10 @@
 -duplicates for fact speedup
 -id vs _id
 
--import upon upgrade
-
--memory score
+-format and test past schedule
+-cards added per day
+-retention score
+-number of reps
 
 
 -time WM: history in same DB?
